--- a/.github/workflows/issues-open.yml
+++ b/.github/workflows/issues-open.yml
@@ -13,5 +13,24 @@ jobs:
         run: |
           curl -H "Content-Type: application/json" \
             -X POST \
-            -d "{\"content\": \"🔔 **New Issue Created!**\n#${{ github.event.issue.number }} - ${{ github.event.issue.title }}\n${{ github.event.issue.html_url }}\"}" \
+            -d "{
+              \"embeds\": [{
+                \"title\": \"🔔 New Issue Created!\",
+                \"url\": \"${{ github.event.issue.html_url }}\",
+                \"color\": 15258703,
+                \"description\": \"#${{ github.event.issue.number }} - ${{ github.event.issue.title }}\",
+                \"fields\": [
+                  {
+                    \"name\": \"👤 작성자\",
+                    \"value\": \"${{ github.event.issue.user.login }}\",
+                    \"inline\": true
+                  },
+                  {
+                    \"name\": \"📝 내용\",
+                    \"value\": \"${{ github.event.issue.body || '내용 없음' }}\"
+                  }
+                ],
+                \"timestamp\": \"${{ github.event.issue.created_at }}\"
+              }]
+            }" \
             ${{ secrets.DISCORD_WEBHOOK_ISSUES }}
